--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# compiled output
+# webpack compiled output
 /dist
+
+# emscripten output
+string.js
+string.wasm
 
 # dependencies
 /node_modules
+package-lock.json
+package.json
+yarn.lock
+
+# vs code config
+/.vscode
+
+# webpack
+/webpack.config.js
